[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "envlens"
version = "0.1.0"
description = "Audit and diff .env files across environments to catch missing or mismatched variables."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["dotenv", "env", "audit", "diff", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.scripts]
envlens = "envlens.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["envlens"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
